Fixed mapping problem where UK and FK share columns they are inserted
