# dbrepo-data-service/rest-service/src/main/java/at/tuwien/endpoints/AccessEndpoint.java
@@ -16,6 +16,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -75,8 +76,8 @@ public class AccessEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<Void> create(@NotBlank @PathVariable("databaseId") Long databaseId,
-                                       @NotBlank @PathVariable("userId") UUID userId,
+    public ResponseEntity<Void> create(@NotNull @PathVariable("databaseId") Long databaseId,
+                                       @org.hibernate.validator.constraints.UUID @PathVariable("userId") UUID userId,
                                        @Valid @RequestBody UpdateDatabaseAccessDto data)
             throws NotAllowedException, DatabaseUnavailableException, DatabaseNotFoundException,
             RemoteUnavailableException, UserNotFoundException, DatabaseMalformedException, MetadataServiceException {
@@ -131,8 +132,8 @@ public class AccessEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<Void> update(@NotBlank @PathVariable("databaseId") Long databaseId,
-                                       @NotBlank @PathVariable("userId") UUID userId,
+    public ResponseEntity<Void> update(@NotNull @PathVariable("databaseId") Long databaseId,
+                                       @org.hibernate.validator.constraints.UUID @PathVariable("userId") UUID userId,
                                        @Valid @RequestBody UpdateDatabaseAccessDto access) throws NotAllowedException,
             DatabaseUnavailableException, DatabaseNotFoundException, RemoteUnavailableException, UserNotFoundException,
             DatabaseMalformedException, MetadataServiceException {
@@ -188,8 +189,8 @@ public class AccessEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<Void> revoke(@NotBlank @PathVariable("databaseId") Long databaseId,
-                                       @NotBlank @PathVariable("userId") UUID userId) throws NotAllowedException,
+    public ResponseEntity<Void> revoke(@NotNull @PathVariable("databaseId") Long databaseId,
+                                       @org.hibernate.validator.constraints.UUID @PathVariable("userId") UUID userId) throws NotAllowedException,
             DatabaseUnavailableException, DatabaseNotFoundException, RemoteUnavailableException, UserNotFoundException,
             DatabaseMalformedException, MetadataServiceException {
         log.debug("endpoint revoke access to database, databaseId={}, userId={}", databaseId, userId);
