# dbrepo-metadata-service/api/src/main/java/at/tuwien/api/container/image/ImageDto.java
@@ -61,4 +61,7 @@ public class ImageDto {
     @JsonProperty("data_types")
     private List<DataTypeDto> dataTypes;
 
+    @NotNull
+    private List<OperatorDto> operators;
+
 }
